vectorized and added threshold

--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -13,24 +13,7 @@
     "import copy\n",
     "import re\n",
     "import nltk\n",
-    "from sklearn.metrics.pairwise import cosine_similarity, \n",
-    "\n",
-    "#import encoding dictionaries. i.e. bert_dict['cat'] = [0.5, -.4, 0.001,...]\n",
-    "bert_dict = np.load('bert.npy', allow_pickle = True); bert_dict = bert_dict[()]\n",
-    "glove_dict = np.load('glove.npy', allow_pickle = True); glove_dict = glove_dict[()]\n",
-    "'''        \n",
-    "#glove embeddings for now, will delete later        \n",
-    "glove_embeddings = {}\n",
-    "with open(\"./top_50000.txt\", 'r', encoding=\"utf8\") as f:\n",
-    "    for line in f:\n",
-    "        values = line.split()\n",
-    "        word = values[0]\n",
-    "        tag = nltk.pos_tag([word])[0][1]\n",
-    "        if tag in ['NN', 'NNP'] and len(word) != 1 and word.isalpha():\n",
-    "            vector = np.asarray(values[1:], \"float32\")\n",
-    "            glove_embeddings[word] = vector\n",
-    "np.save('glove.npy', glove_embeddings)\n",
-    "'''"
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -39,30 +22,156 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import list of codenames words\n",
+    "# Import encoding dictionaries. i.e. bert_dict['cat'] = [0.5, -.4, 0.001,...]\n",
+    "bert_dict = np.load('bert.npy', allow_pickle = True); bert_dict = bert_dict[()]\n",
+    "glove_dict = np.load('glove.npy', allow_pickle = True); glove_dict = glove_dict[()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import list of codenames words\n",
     "codenames_words = []\n",
     "with open(\"./codenames_words.txt\", 'r') as f:\n",
     "    for line in f:\n",
-    "        codenames_words.append(line.strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#remove codenames words not in embeddings\n",
+    "        codenames_words.append(line.strip())\n",
+    "        \n",
+    "# Remove codenames words not in embeddings\n",
     "def removeInvalidCodenames(embeddings, codenames_words):\n",
     "    removed_words = []\n",
     "    for item in codenames_words:\n",
     "        if item not in embeddings:\n",
     "            removed_words.append(item)\n",
     "            codenames_words.remove(item)\n",
-    "    print('Words removed from codenames are', removed_words, len(removed_words))\n",
+    "    #print('Words removed from codenames are', removed_words)\n",
     "    return codenames_words\n",
     "\n",
-    "codenames_words = removeInvalidCodenames(glove_dict, codenames_words)"
+    "codenames_words_glove = removeInvalidCodenames(glove_dict, codenames_words)\n",
+    "codenames_words = removeInvalidCodenames(bert_dict, codenames_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Turn BERT into indexable embeddings\n",
+    "all_bert_words = list(bert_dict.keys())\n",
+    "word_to_idx = dict(zip(all_bert_words, range(len(all_bert_words))))\n",
+    "idx_to_word = dict(zip(range(len(all_bert_words)), all_bert_words))\n",
+    "\n",
+    "# Get indexes for codenames words\n",
+    "codenames_words_idxs = np.array([word_to_idx[word] for word in codenames_words])\n",
+    "\n",
+    "# Get BERT embeddings as giant matrix\n",
+    "bert_embedding = [bert_dict[word] for word in all_bert_words]\n",
+    "bert_embedding = np.vstack(bert_embedding) # shape = (42000, 768)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.special import softmax\n",
+    "\n",
+    "# Returns list of random indexes from indexes of codenames words\n",
+    "def generate_single_board(codenames_words_idxs): \n",
+    "    return np.random.choice(codenames_words_idxs, 3)\n",
+    "\n",
+    "# Calculates prob. distribution (using softmax) over entire vocabulary for a single board\n",
+    "def clue_dist_for_one_board(embedding, board, scoring = 'cosine', temperature = 1):\n",
+    "    '''\n",
+    "    embedding: V x [embedding_size = 768]\n",
+    "    board: (3,) [indices of good words in all_bert_words]\n",
+    "    scoring: either cosine or euclidean\n",
+    "    temperature: sampling smoothing over prob. distribution\n",
+    "    '''\n",
+    "    \n",
+    "    V, K = embedding.shape\n",
+    "    board_embedding = embedding[board] # shape = (3 x 768)\n",
+    "    \n",
+    "    # Calculate score for each word in vocabulary using the specified scoring function\n",
+    "    if scoring == 'euclidean': \n",
+    "        score = -((board_embedding.reshape(1, 3, K) - embedding.reshape(V, 1, K)) ** 2).sum(2).sum(1) # shape V\n",
+    "    else: # cosine\n",
+    "        score = (np.matmul(board_embedding, embedding.T) / \n",
+    "                 (np.matmul(np.linalg.norm(board_embedding, axis=1, keepdims=True), \n",
+    "                            np.linalg.norm(embedding, axis=1, keepdims=True).T))).sum(0)\n",
+    "    \n",
+    "    # Penalize scores for good words\n",
+    "    score[board] -= 1e6\n",
+    "    \n",
+    "    return softmax(score / temperature)\n",
+    "\n",
+    "# Returns the top clues for a certain board based on the probability distribution over the vocabulary\n",
+    "def return_top_clues(embedding_matrix, board, scoring, p_value): \n",
+    "    # probability distribution for one board\n",
+    "    p = clue_dist_for_one_board(embedding_matrix, board, scoring, 15)\n",
+    "    return [idx_to_word[word] for word in np.arange(p.shape[0])[p > p_value]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper functions for debugging\n",
+    "\n",
+    "# Pass in words like ['cat', 'dog', 'fish']\n",
+    "def generate_board_from_words(words):\n",
+    "    return np.array([word_to_idx[word] for word in words])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = generate_single_board(codenames_words_idxs)\n",
+    "print([idx_to_word[idx] for idx in board])\n",
+    "\n",
+    "print('Cosine Similarity Scoring Clues:')\n",
+    "# Cosine Clues\n",
+    "clues = return_top_clues(bert_embedding, board, 'cosine', 0.000024)\n",
+    "print(clues[:20])\n",
+    "\n",
+    "print('Euclidean Scoring Clues:')\n",
+    "# Euclidean Clues\n",
+    "clues = return_top_clues(bert_embedding, board, 'euclidean', 0.001)\n",
+    "print(clues[:20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bert_clue_generator(n): \n",
+    "    for i in range(n):  \n",
+    "        board = generate_single_board(codenames_words_idxs)\n",
+    "        clues = return_top_clues(bert_embedding, board, 'euclidean')\n",
+    "        if len(clues) > 10:\n",
+    "            print([idx_to_word[idx] for idx in board])\n",
+    "            print(clues[:20])\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_clue_generator(5)"
    ]
   },
   {
@@ -127,18 +236,6 @@
     "print(spatial.distance.cosine(glove_dict['belt'],glove_dict['hotel']))\n",
     "print(spatial.distance.cosine(glove_dict['kangaroo'],glove_dict['hotel']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_single_board(codenames_words):\n",
-    "    good = sample(codenames_words, 3)\n",
-    "\n",
-    "generate_single_example(codenames_words)"
-   ]
   }
  ],
  "metadata": {
@@ -157,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
