--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clue_dist_for_one_board_pt(embedding, board, scoring='cosine', temperature=1):\n",
+    "    \"\"\"\n",
+    "    Assume for now that the inputs are numpy matrices:\n",
+    "    embedding: V x K matrix of floats\n",
+    "    board: (3,) matrix of ints\n",
+    "    \"\"\"\n",
+    "    embedding_pt = torch.tensor(embedding, requires_grad=False)\n",
+    "    board_pt = torch.tensor(board, requires_grad=False)\n",
+    "    V, K = embedding.shape\n",
+    "    \n",
+    "    # let's try it \n",
+    "    board_embedding_pt = embedding_pt[board_pt].view(1, 3 * K) # 3 x 768\n",
+    "    board_embedding_big = board_embedding_pt.expand(V, 3 * K)\n",
+    "    all_input = torch.concat([embedding_pt, board_embedding_big], dim=1) # (V x 3072)\n",
+    "    \n",
+    "    # deeplearning ML whoooo\n",
+    "    neural_network_1 = nn.Linear(3072, 100)\n",
+    "    neural_network_2 = nn.Linear(100, 1)\n",
+    "    \n",
+    "    output = neural_network_2(neural_network_1(all_input)) # V x 1\n",
+    "    return torch.softmax(output / temperature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn.Linear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = generate_single_board(codenames_words_idxs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyNeuralNetwork(nn.Module):\n",
+    "    def __init__(self, hidden_size):\n",
+    "        super(MyNeuralNetwork, self).__init__()\n",
+    "        self.neural_network_1 = nn.Linear(3072, hidden_size)\n",
+    "        self.neural_network_2 = nn.Linear(hidden_size, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return nn.Tanh(self.neural_network_2(nn.Tanh(self.neural_network_1(x))))5678"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.randn(5000, 3072)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(True)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mnn(x) == mnn.forward(x)).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5000, 1])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnn = MyNeuralNetwork(50)\n",
+    "mnn(x).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-5c15806c50c8>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-16-5c15806c50c8>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    def clue_dist_...\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "mnn = MyNeuralNetwork(50)\n",
+    "\n",
+    "def clue_dist_...\n",
+    "    \n",
+    "    output = mnn(all_input)\n",
+    "    \n",
+    "    return torch.softmax()\n",
+    "\n",
+    "def loss_function(p, gold_word):\n",
+    "    return torch.nn.functional.nll_loss(p, gold_word)\n",
+    "\n",
+    "# this line might fail\n",
+    "optimizer = torch.optim.Adam(mnn.parameters(), lr=0.001)\n",
+    "\n",
+    "for epoch in epochs:\n",
+    "    loss = 0\n",
+    "    for example in examples:\n",
+    "        # batch size 1\n",
+    "        board, gold_word = example\n",
+    "        loss += loss_function(clue_dist(embedding, board), gold_word)\n",
+    "    \n",
+    "    # backprop!\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    print(neural_network_1.params)\n",
+    "    \n",
+    "    # gradient descent given the computed gradients\n",
+    "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['eye', 'dinosaur', 'ruler']\n",
+      "Cosine Similarity Scoring Clues:\n",
+      "['expert', 'aware', 'native', 'garage', 'circle', 'liquid', 'monster', 'dealer', 'tracking', 'dean', 'sensor', 'lounge', 'killer', 'basket', 'galaxy', 'talented', 'flavor', 'facial', 'citizen', 'container']\n",
+      "Euclidean Scoring Clues:\n",
+      "['alien', 'wizard', 'banana', 'vegetarian', 'clone', 'observer', 'sphere', 'abnormal', 'flagship', 'squirrel', 'surfer', 'sidekick', 'sorcerer', 'primate', 'settler']\n"
+     ]
+    }
+   ],
    "source": [
     "board = generate_single_board(codenames_words_idxs)\n",
     "print([idx_to_word[idx] for idx in board])\n",
@@ -151,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,18 +347,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "return_top_clues() missing 1 required positional argument: 'p_value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-451d69807e58>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbert_clue_generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-1ddbd78806b2>\u001b[0m in \u001b[0;36mbert_clue_generator\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mboard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenerate_single_board\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodenames_words_idxs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mclues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreturn_top_clues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbert_embedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'euclidean'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclues\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx_to_word\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0midx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mboard\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: return_top_clues() missing 1 required positional argument: 'p_value'"
+     ]
+    }
+   ],
    "source": [
     "bert_clue_generator(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The board we will be finding clues for is ['rome', 'fly', 'opera']\n",
+      "Top ten clues are ['operas', 'mermaid', 'ballet', 'underworld', 'metropolis', 'musica', 'música', 'bath', 'kite', 'gloria']\n",
+      "Top ten clues are ['hence', 'latter', 'brought', 'aka', 'meant', 'forget', 'mention', 'instance', 'fro', 'wonder']\n"
+     ]
+    }
+   ],
    "source": [
     "def generate_single_board(codenames_words):\n",
     "    #randomly selects three words from the codenames board\n",
@@ -254,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
