--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,12 +113,31 @@
     "def return_top_clues(embedding_matrix, board, scoring, p_value): \n",
     "    # probability distribution for one board\n",
     "    p = clue_dist_for_one_board(embedding_matrix, board, scoring, 15)\n",
-    "    return [idx_to_word[word] for word in np.arange(p.shape[0])[p > p_value]]"
+    "    return [idx_to_word[word] for word in np.arange(p.shape[0])[p > p_value]]\n",
+    "\n",
+    "# Write n examples to txt file\n",
+    "def generate_n_examples(n, embedding_matrix, scoring, p_value): \n",
+    "    with open('examples.txt', 'w') as f: \n",
+    "        for i in range(n): \n",
+    "            board = generate_single_board(codenames_words_idxs)\n",
+    "            clues = return_top_clues(bert_embedding, board, scoring, p_value)\n",
+    "            if len(clues) > 10:\n",
+    "                word_string = ', '.join([idx_to_word[idx] for idx in board] + clues[:20]) + '\\n'\n",
+    "                f.write(str(i) + '.' + word_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_n_examples(100, bert_embedding, 'cosine', 0.000024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,40 +219,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(True)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(mnn(x) == mnn.forward(x)).all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([5000, 1])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnn = MyNeuralNetwork(50)\n",
     "mnn(x).shape"
@@ -241,18 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-16-5c15806c50c8>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-16-5c15806c50c8>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    def clue_dist_...\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnn = MyNeuralNetwork(50)\n",
     "\n",
@@ -286,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,21 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['eye', 'dinosaur', 'ruler']\n",
-      "Cosine Similarity Scoring Clues:\n",
-      "['expert', 'aware', 'native', 'garage', 'circle', 'liquid', 'monster', 'dealer', 'tracking', 'dean', 'sensor', 'lounge', 'killer', 'basket', 'galaxy', 'talented', 'flavor', 'facial', 'citizen', 'container']\n",
-      "Euclidean Scoring Clues:\n",
-      "['alien', 'wizard', 'banana', 'vegetarian', 'clone', 'observer', 'sphere', 'abnormal', 'flagship', 'squirrel', 'surfer', 'sidekick', 'sorcerer', 'primate', 'settler']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "board = generate_single_board(codenames_words_idxs)\n",
     "print([idx_to_word[idx] for idx in board])\n",
@@ -331,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,41 +323,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "return_top_clues() missing 1 required positional argument: 'p_value'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-451d69807e58>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbert_clue_generator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-8-1ddbd78806b2>\u001b[0m in \u001b[0;36mbert_clue_generator\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mboard\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgenerate_single_board\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcodenames_words_idxs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[0mclues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreturn_top_clues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbert_embedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mboard\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'euclidean'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclues\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx_to_word\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0midx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mboard\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: return_top_clues() missing 1 required positional argument: 'p_value'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bert_clue_generator(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The board we will be finding clues for is ['rome', 'fly', 'opera']\n",
-      "Top ten clues are ['operas', 'mermaid', 'ballet', 'underworld', 'metropolis', 'musica', 'música', 'bath', 'kite', 'gloria']\n",
-      "Top ten clues are ['hence', 'latter', 'brought', 'aka', 'meant', 'forget', 'mention', 'instance', 'fro', 'wonder']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def generate_single_board(codenames_words):\n",
     "    #randomly selects three words from the codenames board\n",
@@ -457,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
