--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,11 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_n_examples(100, bert_embedding, 'cosine', 0.000024)"
+    "generate_n_examples(500, bert_embedding, 'cosine', 0.000024)\n",
+    "\n",
+    "# board = generate_single_board(codenames_words_idxs)\n",
+    "# print([idx_to_word[idx] for idx in board])\n",
+    "\n",
+    "# print('Cosine Similarity Scoring Clues:')\n",
+    "# # Cosine Clues\n",
+    "# clues = return_top_clues(bert_embedding, board, 'cosine', 0.000024)\n",
+    "# print(clues[:20])\n",
+    "\n",
+    "# print('Euclidean Scoring Clues:')\n",
+    "# # Euclidean Clues\n",
+    "# clues = return_top_clues(bert_embedding, board, 'euclidean', 0.001)\n",
+    "# print(clues[:20])"
    ]
   },
   {
