added examples.txt for collecting data

--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bert_dict_copy = bert_dict.copy()\n",
+    "\n",
+    "for key in bert_dict_copy:  \n",
+    "    tag = nltk.pos_tag([key.strip()])[0][1]\n",
+    "    if tag not in ['NN', 'NNP']: \n",
+    "        del bert_dict[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +127,10 @@
     "def return_top_clues(embedding_matrix, board, scoring, p_value): \n",
     "    # probability distribution for one board\n",
     "    p = clue_dist_for_one_board(embedding_matrix, board, scoring, 15)\n",
-    "    return [idx_to_word[word] for word in np.arange(p.shape[0])[p > p_value]]\n",
+    "    p_index = np.arange(p.shape[0])\n",
+    "    sorted_indexes = [x for _,x in sorted(zip(p[p > p_value], p_index[p > p_value]), reverse=True)]\n",
+    "    return [idx_to_word[idx] for idx in sorted_indexes]\n",
+    "    #return [idx_to_word[word] for word in np.arange(p.shape[0])[p > p_value]]\n",
     "\n",
     "# Write n examples to txt file\n",
     "def generate_n_examples(n, embedding_matrix, scoring, p_value): \n",
@@ -128,23 +145,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_n_examples(500, bert_embedding, 'cosine', 0.000024)\n",
+    "# Testing out p-values and temperature\n",
+    "def generate_board_from_words(words):\n",
+    "    return np.array([word_to_idx[word] for word in words])\n",
     "\n",
+    "board = generate_board_from_words(['cat', 'dog', 'fish'])\n",
+    "clues = return_top_clues(bert_embedding, board, 'cosine', 0.00003788)\n",
+    "print(clues[:25])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write n examples to 'examples.txt'\n",
+    "generate_n_examples(1000, bert_embedding, 'cosine', 0.00003788)\n",
+    "\n",
+    "# Compare cosine vs euclidean\n",
     "# board = generate_single_board(codenames_words_idxs)\n",
     "# print([idx_to_word[idx] for idx in board])\n",
     "\n",
     "# print('Cosine Similarity Scoring Clues:')\n",
     "# # Cosine Clues\n",
-    "# clues = return_top_clues(bert_embedding, board, 'cosine', 0.000024)\n",
+    "# clues = return_top_clues(bert_embedding, board, 'cosine', 0.00003788)\n",
     "# print(clues[:20])\n",
     "\n",
     "# print('Euclidean Scoring Clues:')\n",
     "# # Euclidean Clues\n",
-    "# clues = return_top_clues(bert_embedding, board, 'euclidean', 0.001)\n",
+    "# clues = return_top_clues(bert_embedding, board, 'euclidean', 0.0015)\n",
     "# print(clues[:20])"
    ]
   },
@@ -218,7 +252,7 @@
     "        self.neural_network_2 = nn.Linear(hidden_size, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return nn.Tanh(self.neural_network_2(nn.Tanh(self.neural_network_1(x))))5678"
+    "        return nn.Tanh(self.neural_network_2(nn.Tanh(self.neural_network_1(x))))"
    ]
   },
   {
