increased threshold for examples

--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -96,7 +96,10 @@
     "\n",
     "# Returns list of random indexes from indexes of codenames words\n",
     "def generate_single_board(codenames_words_idxs): \n",
-    "    return np.random.choice(codenames_words_idxs, 3)\n",
+    "    board = np.random.choice(codenames_words_idxs, 3)\n",
+    "    while len(board) != len(set(board)): \n",
+    "        board = np.random.choice(codenames_words_idxs, 3)\n",
+    "    return board\n",
     "\n",
     "# Calculates prob. distribution (using softmax) over entire vocabulary for a single board\n",
     "def clue_dist_for_one_board(embedding, board, scoring = 'cosine', temperature = 1):\n",
@@ -138,7 +141,7 @@
     "        for i in range(n): \n",
     "            board = generate_single_board(codenames_words_idxs)\n",
     "            clues = return_top_clues(bert_embedding, board, scoring, p_value)\n",
-    "            if len(clues) > 10:\n",
+    "            if len(clues) > 5: \n",
     "                word_string = ', '.join([idx_to_word[idx] for idx in board] + clues[:20]) + '\\n'\n",
     "                f.write(str(i) + '.' + word_string)"
    ]
@@ -165,7 +168,7 @@
    "outputs": [],
    "source": [
     "# Write n examples to 'examples.txt'\n",
-    "generate_n_examples(1000, bert_embedding, 'cosine', 0.00003788)\n",
+    "generate_n_examples(1000, bert_embedding, 'cosine', 0.000037885)\n",
     "\n",
     "# Compare cosine vs euclidean\n",
     "# board = generate_single_board(codenames_words_idxs)\n",
@@ -173,7 +176,7 @@
     "\n",
     "# print('Cosine Similarity Scoring Clues:')\n",
     "# # Cosine Clues\n",
-    "# clues = return_top_clues(bert_embedding, board, 'cosine', 0.00003788)\n",
+    "# clues = return_top_clues(bert_embedding, board, 'cosine', 0.000037885)\n",
     "# print(clues[:20])\n",
     "\n",
     "# print('Euclidean Scoring Clues:')\n",
