2 word version of data collection files

--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -96,9 +96,9 @@
     "\n",
     "# Returns list of random indexes from indexes of codenames words\n",
     "def generate_single_board(codenames_words_idxs): \n",
-    "    board = np.random.choice(codenames_words_idxs, 3)\n",
+    "    board = np.random.choice(codenames_words_idxs, 2)\n",
     "    while len(board) != len(set(board)): \n",
-    "        board = np.random.choice(codenames_words_idxs, 3)\n",
+    "        board = np.random.choice(codenames_words_idxs, 2)\n",
     "    return board\n",
     "\n",
     "# Calculates prob. distribution (using softmax) over entire vocabulary for a single board\n",
@@ -115,7 +115,7 @@
     "    \n",
     "    # Calculate score for each word in vocabulary using the specified scoring function\n",
     "    if scoring == 'euclidean': \n",
-    "        score = -((board_embedding.reshape(1, 3, K) - embedding.reshape(V, 1, K)) ** 2).sum(2).sum(1) # shape V\n",
+    "        score = -((board_embedding.reshape(1, 2, K) - embedding.reshape(V, 1, K)) ** 2).sum(2).sum(1) # shape V\n",
     "    else: # cosine\n",
     "        score = (np.matmul(board_embedding, embedding.T) / \n",
     "                 (np.matmul(np.linalg.norm(board_embedding, axis=1, keepdims=True), \n",
@@ -141,7 +141,7 @@
     "        for i in range(n): \n",
     "            board = generate_single_board(codenames_words_idxs)\n",
     "            clues = return_top_clues(bert_embedding, board, scoring, p_value)\n",
-    "            if len(clues) > 5: \n",
+    "            if len(clues) > 0: \n",
     "                word_string = ', '.join([idx_to_word[idx] for idx in board] + clues[:20]) + '\\n'\n",
     "                f.write(str(i) + '.' + word_string)"
    ]
@@ -157,7 +157,7 @@
     "    return np.array([word_to_idx[word] for word in words])\n",
     "\n",
     "board = generate_board_from_words(['cat', 'dog', 'fish'])\n",
-    "clues = return_top_clues(bert_embedding, board, 'cosine', 0.00003788)\n",
+    "clues = return_top_clues(bert_embedding, board, 'cosine', 0.000037885)\n",
     "print(clues[:25])"
    ]
   },
@@ -168,15 +168,15 @@
    "outputs": [],
    "source": [
     "# Write n examples to 'examples.txt'\n",
-    "generate_n_examples(1000, bert_embedding, 'cosine', 0.000037885)\n",
+    "generate_n_examples(1000, bert_embedding, 'cosine', 0)\n",
     "\n",
-    "# Compare cosine vs euclidean\n",
+    "#Compare cosine vs euclidean\n",
     "# board = generate_single_board(codenames_words_idxs)\n",
     "# print([idx_to_word[idx] for idx in board])\n",
     "\n",
     "# print('Cosine Similarity Scoring Clues:')\n",
     "# # Cosine Clues\n",
-    "# clues = return_top_clues(bert_embedding, board, 'cosine', 0.000037885)\n",
+    "# clues = return_top_clues(bert_embedding, board, 'cosine', 0.000038)\n",
     "# print(clues[:20])\n",
     "\n",
     "# print('Euclidean Scoring Clues:')\n",
