--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -111,15 +111,18 @@
     "    '''\n",
     "    \n",
     "    V, K = embedding.shape\n",
-    "    board_embedding = embedding[board] # shape = (3 x 768)\n",
+    "    board_embedding = embedding[board] # shape = (2 x 768)\n",
     "    \n",
     "    # Calculate score for each word in vocabulary using the specified scoring function\n",
     "    if scoring == 'euclidean': \n",
     "        score = -((board_embedding.reshape(1, 2, K) - embedding.reshape(V, 1, K)) ** 2).sum(2).sum(1) # shape V\n",
     "    else: # cosine\n",
+    "#         score = (np.matmul(board_embedding, embedding.T) / \n",
+    "#                  (np.matmul(np.linalg.norm(board_embedding, axis=1, keepdims=True), \n",
+    "#                             np.linalg.norm(embedding, axis=1, keepdims=True).T))).sum(0)\n",
     "        score = (np.matmul(board_embedding, embedding.T) / \n",
     "                 (np.matmul(np.linalg.norm(board_embedding, axis=1, keepdims=True), \n",
-    "                            np.linalg.norm(embedding, axis=1, keepdims=True).T))).sum(0)\n",
+    "                            np.linalg.norm(embedding, axis=1, keepdims=True).T))).prod(0)\n",
     "    \n",
     "    # Penalize scores for good words\n",
     "    score[board] -= 1e6\n",
@@ -156,8 +159,8 @@
     "def generate_board_from_words(words):\n",
     "    return np.array([word_to_idx[word] for word in words])\n",
     "\n",
-    "board = generate_board_from_words(['cat', 'dog', 'fish'])\n",
-    "clues = return_top_clues(bert_embedding, board, 'cosine', 0.000037885)\n",
+    "board = generate_board_from_words(['cat', 'dog'])\n",
+    "clues = return_top_clues(bert_embedding, board, 'cosine', 0)\n",
     "print(clues[:25])"
    ]
   },
