--- a/nnet.ipynb
+++ b/nnet.ipynb
@@ -6,9 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Not sure if we need all of this...\n",
     "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "from torch.utils.data import random_split\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import spatial\n",
+    "from random import sample\n",
+    "import copy\n",
+    "import re\n",
+    "import nltk\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -17,26 +28,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import encoding dictionaries. i.e. bert_dict['cat'] = [0.5, -.4, 0.001,...]\n",
+    "bert_dict = np.load('bert.npy', allow_pickle = True); bert_dict = bert_dict[()]\n",
+    "glove_dict = np.load('glove.npy', allow_pickle = True); glove_dict = glove_dict[()]\n",
     "\n",
+    "# Part of speech tagging (already done on GloVe embeddings)\n",
+    "bert_dict_copy = bert_dict.copy()\n",
     "\n",
+    "for key in bert_dict_copy:  \n",
+    "    tag = nltk.pos_tag([key.strip()])[0][1]\n",
+    "    if tag not in ['NN', 'NNP']: \n",
+    "        del bert_dict[key]\n",
+    "\n",
+    "# Turn BERT into indexable embeddings\n",
+    "all_bert_words = list(bert_dict.keys())\n",
+    "word_to_idx = dict(zip(all_bert_words, range(len(all_bert_words))))\n",
+    "idx_to_word = dict(zip(range(len(all_bert_words)), all_bert_words))\n",
+    "\n",
+    "# Get BERT embeddings as giant matrix\n",
+    "bert_embedding = [bert_dict[word] for word in all_bert_words]\n",
+    "bert_embedding = np.vstack(bert_embedding) # shape = (42000, 768)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read data from txt file\n",
+    "def read_data(examples, data): \n",
+    "    '''\n",
+    "    Takes in dataset from examples and data (make sure they're for the same data!!!) and appends each example to\n",
+    "    a matrix. \n",
+    "    For example, \n",
+    "        board = 'cat', 'dog' (from examples)\n",
+    "        gold_word = 'pet' (from data)\n",
+    "    Will be appended as: \n",
+    "        [[word_to_idx['cat], word_to_idx['dog']], [word_to_idx['dog']]]\n",
+    "    '''\n",
+    "    data_matrix = []\n",
+    "    with open(examples) as examples, open(data) as data:\n",
+    "        for line1, line2 in zip(examples, data):\n",
+    "            input_line_1 = line1.split('.')\n",
+    "            good_words = input_line_1[1].strip('\\n').split(',')[:3]\n",
+    "            \n",
+    "            input_line_2 = line2.split('.')\n",
+    "            gold_word = input_line_2[1].strip()\n",
+    "            \n",
+    "            if input_line_1[0] == input_line_2[0]: \n",
+    "                board = [word_to_idx[word.strip()] for word in good_words]\n",
+    "                if gold_word == 'No good clues': \n",
+    "                    continue\n",
+    "            \n",
+    "                try: \n",
+    "                    data_matrix.append([board, [word_to_idx[gold_word]]])\n",
+    "                except: \n",
+    "                    continue\n",
+    "            else: \n",
+    "                print(input_line_1[0])\n",
+    "                print(input_line_2[0])\n",
+    "                print('Uh oh, misaligment!')\n",
+    "                break\n",
+    "            \n",
+    "    return data_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class NeuralNetwork(nn.Module):\n",
     "    def __init__(self, hidden_size):\n",
     "        super(NeuralNetwork, self).__init__()\n",
     "        \n",
-    "        # Do we want an embedding layer??\n",
-    "        # self.embedding = ...\n",
-    "        \n",
     "        # Layer 1\n",
-    "        self.neural_network_1 = nn.Linear(3072, hidden_size)\n",
+    "        self.neural_network_1 = nn.Linear(2304, hidden_size)\n",
     "        \n",
     "        # Layer 2\n",
     "        self.neural_network_2 = nn.Linear(hidden_size, 1)\n",
     "\n",
-    "    def forward(self, s):                                \n",
-    "        # apply the embedding layer that maps each token to its embedding\n",
-    "        # dim: batch_size x seq_len x embedding_dim\n",
-    "        # s = self.embedding(s)\n",
-    "        \n",
+    "    # x is of size V x 1536 \n",
+    "    def forward(self, x):                                \n",
     "        # First layer\n",
     "        s = self.neural_network_1(x)\n",
     "        \n",
@@ -50,6 +125,11 @@
     "        s = nn.Tanh(s)\n",
     "        \n",
     "        return torch.softmax(s, dim=1)\n",
+    "    \n",
+    "    # Accuracy\n",
+    "    def accuracy(out, labels):\n",
+    "        outputs = np.argmax(out, axis=1)\n",
+    "        return np.sum(outputs==labels)/float(labels.size)\n",
     "\n",
     "\n",
     "def loss_function(p_dist, gold_word):\n",
@@ -62,37 +142,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clue_dist(): \n",
-    "    \n",
-    "\n",
-    "def train(model, train_data, val_data, optimizer, loss_function, params, model_name): \n",
-    "    # What does this line do?\n",
-    "    model.train()\n",
+    "def train(model, train_data, optimizer, loss_function, params, model_name): \n",
+    "    epochs = params['num_epochs']\n",
+    "    embedding_pt = torch.tensor(params['embedding'], requires_grad=False)\n",
+    "    V, K = embedding.shape\n",
     "    \n",
     "    for epoch in epochs: \n",
+    "        print('Epoch: {}'.format(epoch))\n",
+    "        \n",
+    "        # Set model to train\n",
+    "        model.train()\n",
+    "        \n",
+    "        # Initialize loss\n",
     "        loss = 0\n",
     "        \n",
-    "        for example in examples:\n",
-    "            # batch size 1\n",
+    "        for example in train_data:\n",
     "            board, gold_word = example\n",
     "            \n",
-    "            embedding_pt = torch.tensor(embedding, requires_grad=False)\n",
     "            board_pt = torch.tensor(board, requires_grad=False)\n",
-    "            V, K = embedding.shape\n",
     "    \n",
-    "            board_embedding_pt = embedding_pt[board_pt].view(1, 3 * K) # 3 x 768\n",
-    "            board_embedding_big = board_embedding_pt.expand(V, 3 * K)\n",
-    "            all_input = torch.concat([embedding_pt, board_embedding_big], dim=1) # (V x 3072)\n",
+    "            board_embedding_pt = embedding_pt[board_pt].view(1, 2 * K) # 2 x 768\n",
+    "            board_embedding_big = board_embedding_pt.expand(V, 2 * K) # V x (2 X 768)\n",
+    "            all_input = torch.concat([embedding_pt, board_embedding_big], dim=1) # (V x 1536)\n",
     "            \n",
     "            output = model(all_input)\n",
     "            \n",
     "            loss += loss_function(output, gold_word)\n",
     "        \n",
+    "        # Clear previous gradients\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
     "        # Backprop\n",
     "        loss.backward()\n",
     "        \n",
-    "        # Log data\n",
-    "        "
+    "        # Perform update using \n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        # Save params to model_name.txt or something\n",
+    "        \n",
+    "    return \n",
+    "\n",
+    "def evaluate(model, val_data, loss_fn, params): \n",
+    "    # Set model to evaluation mode\n",
+    "    model.eval()\n",
+    "    \n",
+    "    loss = 0\n",
+    "    \n",
+    "    for example in val_data: \n",
+    "        board, gold_word = example\n",
+    "            \n",
+    "        board_pt = torch.tensor(board, requires_grad=False)\n",
+    "\n",
+    "        board_embedding_pt = embedding_pt[board_pt].view(1, 2 * K) # 2 x 768\n",
+    "        board_embedding_big = board_embedding_pt.expand(V, 2 * K) # V x (2 X 768)\n",
+    "        all_input = torch.concat([embedding_pt, board_embedding_big], dim=1) # (V x 1536)\n",
+    "        \n",
+    "        output = model(all_input)\n",
+    "        \n",
+    "        loss += loss_function(output, gold_word)"
    ]
   },
   {
@@ -105,13 +212,20 @@
     "torch.manual_seed(0)\n",
     "\n",
     "# Load data\n",
-    "train_data, val_data = ...\n",
+    "data_matrix = read_data('examples.txt', 'data.txt')\n",
+    "train_data, val_data = random_split(data_matrix, [0.8*len(data_matrix), 0.2*len(data_matrix)])\n",
+    "\n",
+    "# Includes things like # of epochs, etc.\n",
+    "params = {\n",
+    "    'num_epochs' : 100\n",
+    "    'embedding' : bert_embedding\n",
+    "}\n",
     "\n",
     "model = NeuralNetwork(hidden_size = 50)\n",
-    "optimizer = torch.optim.Adam(mnn.parameters(), lr=0.001)\n",
     "\n",
-    "# Includes things like # of epochs, train_size, val_size, etc...\n",
-    "params = ...\n",
+    "# Choice of optimizer\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr = 0.001)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr = 0.01, momentum=0.9)\n",
     "\n",
     "train(model, train_data, val_data, optimizer, loss_function, params, model_name)"
    ]
