--- a/nnet.ipynb
+++ b/nnet.ipynb
@@ -12,6 +12,8 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import random_split\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import spatial\n",
@@ -47,7 +49,7 @@
     "\n",
     "# Get BERT embeddings as giant matrix\n",
     "bert_embedding = [bert_dict[word] for word in all_bert_words]\n",
-    "bert_embedding = np.vstack(bert_embedding) # shape = (42000, 768)"
+    "bert_embedding = np.vstack(bert_embedding) # shape = (30000, 768)"
    ]
   },
   {
@@ -71,7 +73,7 @@
     "    with open(examples) as examples, open(data) as data:\n",
     "        for line1, line2 in zip(examples, data):\n",
     "            input_line_1 = line1.split('.')\n",
-    "            good_words = input_line_1[1].strip('\\n').split(',')[:3]\n",
+    "            good_words = input_line_1[1].strip('\\n').split(',')[:2]\n",
     "            \n",
     "            input_line_2 = line2.split('.')\n",
     "            gold_word = input_line_2[1].strip()\n",
@@ -109,31 +111,30 @@
     "        \n",
     "        # Layer 2\n",
     "        self.neural_network_2 = nn.Linear(hidden_size, 1)\n",
+    "        \n",
+    "        # Tanh\n",
+    "        self.tanh = nn.Tanh()\n",
     "\n",
     "    # x is of size V x 1536 \n",
-    "    def forward(self, x):                                \n",
+    "    def forward(self, x):  \n",
     "        # First layer\n",
     "        s = self.neural_network_1(x)\n",
     "        \n",
     "        # First Tanh\n",
-    "        s = nn.Tanh(s)\n",
+    "        s = self.tanh(s)\n",
     "        \n",
     "        # Second layer\n",
     "        s = self.neural_network_2(s)\n",
     "        \n",
-    "        # Second Tanh\n",
-    "        s = nn.Tanh(s)\n",
-    "        \n",
-    "        return torch.softmax(s, dim=1)\n",
+    "        return s\n",
     "    \n",
     "    # Accuracy\n",
     "    def accuracy(out, labels):\n",
     "        outputs = np.argmax(out, axis=1)\n",
     "        return np.sum(outputs==labels)/float(labels.size)\n",
     "\n",
-    "\n",
     "def loss_function(p_dist, gold_word):\n",
-    "    return torch.nn.functional.nll_loss(p_dist, gold_word)"
+    "    return torch.nn.CrossEntropyLoss()(p_dist, gold_word)"
    ]
   },
   {
@@ -142,12 +143,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, train_data, optimizer, loss_function, params, model_name): \n",
+    "def train(model, train_data, optimizer, loss_function, params): \n",
     "    epochs = params['num_epochs']\n",
-    "    embedding_pt = torch.tensor(params['embedding'], requires_grad=False)\n",
+    "    embedding = params['embedding']\n",
+    "    \n",
+    "    embedding_pt = torch.tensor(embedding, requires_grad=False)\n",
     "    V, K = embedding.shape\n",
     "    \n",
-    "    for epoch in epochs: \n",
+    "    all_loss = []\n",
+    "    \n",
+    "    for epoch in range(epochs): \n",
     "        print('Epoch: {}'.format(epoch))\n",
     "        \n",
     "        # Set model to train\n",
@@ -160,14 +165,20 @@
     "            board, gold_word = example\n",
     "            \n",
     "            board_pt = torch.tensor(board, requires_grad=False)\n",
+    "            gold_word_pt = torch.tensor(gold_word, requires_grad=False)\n",
     "    \n",
     "            board_embedding_pt = embedding_pt[board_pt].view(1, 2 * K) # 2 x 768\n",
     "            board_embedding_big = board_embedding_pt.expand(V, 2 * K) # V x (2 X 768)\n",
-    "            all_input = torch.concat([embedding_pt, board_embedding_big], dim=1) # (V x 1536)\n",
+    "            \n",
+    "            # Add embedding for each vocab word to board_embedding_big\n",
+    "            all_input = torch.cat([embedding_pt, board_embedding_big], dim=1) # (V x 1536)\n",
     "            \n",
     "            output = model(all_input)\n",
+    "            output_T = torch.transpose(output, 0, 1)\n",
     "            \n",
-    "            loss += loss_function(output, gold_word)\n",
+    "            loss += loss_function(output_T, gold_word_pt)\n",
+    "        \n",
+    "        all_loss.append(loss)\n",
     "        \n",
     "        # Clear previous gradients\n",
     "        optimizer.zero_grad()\n",
@@ -177,11 +188,12 @@
     "        \n",
     "        # Perform update using \n",
     "        optimizer.step()\n",
-    "        \n",
-    "        # Save params to model_name.txt or something\n",
-    "        \n",
-    "    return \n",
-    "\n",
+    "    \n",
+    "    plt.plot(all_loss)\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.show()\n",
+    "    \n",
     "def evaluate(model, val_data, loss_fn, params): \n",
     "    # Set model to evaluation mode\n",
     "    model.eval()\n",
@@ -213,11 +225,11 @@
     "\n",
     "# Load data\n",
     "data_matrix = read_data('examples.txt', 'data.txt')\n",
-    "train_data, val_data = random_split(data_matrix, [0.8*len(data_matrix), 0.2*len(data_matrix)])\n",
+    "train_data, val_data = random_split(data_matrix, [25, 9])\n",
     "\n",
     "# Includes things like # of epochs, etc.\n",
     "params = {\n",
-    "    'num_epochs' : 100\n",
+    "    'num_epochs' : 20,\n",
     "    'embedding' : bert_embedding\n",
     "}\n",
     "\n",
@@ -225,10 +237,37 @@
     "\n",
     "# Choice of optimizer\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 0.001)\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr = 0.01, momentum=0.9)\n",
     "\n",
-    "train(model, train_data, val_data, optimizer, loss_function, params, model_name)"
+    "train(model, train_data, optimizer, loss_function, params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
