--- a/data_collection_BERTvGloVe.ipynb
+++ b/data_collection_BERTvGloVe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Part of speech tagging for bert_dict, removing everything that is not a noun or proper noun\n",
     "bert_dict_copy = bert_dict.copy()\n",
-    "\n",
     "for key in bert_dict_copy:  \n",
     "    tag = nltk.pos_tag([key.strip()])[0][1]\n",
     "    if tag not in ['NN', 'NNP']: \n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,15 @@
     "codenames_words = []\n",
     "with open(\"./codenames_words.txt\", 'r') as f:\n",
     "    for line in f:\n",
-    "        codenames_words.append(line.strip())\n",
-    "        \n",
+    "        codenames_words.append(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Remove codenames words not in embeddings\n",
     "def removeInvalidCodenames(embeddings, codenames_words):\n",
     "    removed_words = []\n",
@@ -64,12 +71,12 @@
     "    return codenames_words\n",
     "\n",
     "codenames_words_glove = removeInvalidCodenames(glove_dict, codenames_words)\n",
-    "codenames_words = removeInvalidCodenames(bert_dict, codenames_words)"
+    "codenames_words_bert = removeInvalidCodenames(bert_dict, codenames_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +109,7 @@
     "    return board\n",
     "\n",
     "# Calculates prob. distribution (using softmax) over entire vocabulary for a single board\n",
-    "def clue_dist_for_one_board(embedding, board, scoring = 'cosine', temperature = 1):\n",
+    "def clue_dist_for_one_board(embedding, board, scoring = 'euclidean', temperature = 1):\n",
     "    '''\n",
     "    embedding: V x [embedding_size = 768]\n",
     "    board: (3,) [indices of good words in all_bert_words]\n",
@@ -463,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
